--- a/src/routes/docs/getting-started/index.mdx
+++ b/src/routes/docs/getting-started/index.mdx
@@ -64,7 +64,7 @@ Après la création de votre nouvelle appli, vous verrez un affichage comme le s
 
 ## Exécution en mode développement
 
-Une fois que l'application est téléchargée.
+Une fois que l'application est chargée.
 
 1. Allez dans le répertoire créé par `npm create qwik@latest`.
 
@@ -101,7 +101,7 @@ npm start
 
 Voici quelques commandes utiles pour vous aider à démarrer. Pour une liste complète, veuillez vous référer au `package.json`.
 
-- `npm start` : alias pour `npm run dev`(par défaut, il s'agit d'exécuter SSR)
+- `npm start` : alias pour `npm run dev`(par défaut, il s'agit d'exécuter du SSR)
 - `npm run preview` : Construction de la production et démarrage du serveur de prévisualisation.
 - `npm run build` : construit l'application pour la production.
 - `npm run qwik add` : Sélectionne une intégration à ajouter.
