--- a/src/routes/qwikcity/overview/index.mdx
+++ b/src/routes/qwikcity/overview/index.mdx
@@ -29,7 +29,7 @@ Qwik (cœur) et Qwik City (routage) résolvent les problèmes à deux niveaux d'
 > En tant qu'utilisateur, utiliser Qwik City aujourd'hui pour votre appli est une évidence. Grâce à l'architecture de Qwik, il est livré sans aucune surcharge, ce qui signifie qu'aucun JS supplémentaire ne sera fourni au navigateur.
 
 
-Utilisez Qwik City pour construire un site web de commerce électronique, un site de blog ou tout autre site web qui nécessite un routage, des mises en page, des templates, ou des récupérations/mises à jour de données. Qwik City est construit sur Qwik, et donc les sites Qwik City sont résumables et ne téléchargent que le minimum de JavaScript avec un chargement différé fin.
+Utilisez Qwik City pour construire un site web de commerce électronique, un site de blog ou tout autre site web qui nécessite un routage, des mises en page, des templates, ou des récupérations/mises à jour de données. Qwik City est construit sur Qwik, et donc les sites Qwik City sont résumables et ne chargent que le minimum de JavaScript avec un chargement différé fin.
 
 Qwik City fournit :
 
