--- a/src/routes/tutorial/reactivity/template/index.mdx
+++ b/src/routes/tutorial/reactivity/template/index.mdx
@@ -11,8 +11,8 @@ Pendant le rendu SSR, le serveur doit rendre tous les composants de l'applicatio
 
 Actuellement, les boutons ne font rien. Implémentez les boutons pour incrémenter les propriétés respectives du store.
 
-Une fois que vous avez fait fonctionner les boutons, remarquez que même si tout l'état est stocké dans un seul store, les mises à jour sont très ciblées. Le bouton `a++` provoquera seulement le re-rendu de `<DisplayA>` et le bouton `b++` provoquera seulement le re-rendu de `<DisplayB>`. Le rendu fin est une propriété importante de Qwik. C'est ce qui permet aux applications Qwik de rester légères et de ne pas télécharger trop de code inutilement.
+Une fois que vous avez fait fonctionner les boutons, remarquez que même si tout l'état est stocké dans un seul store, les mises à jour sont très ciblées. Le bouton `a++` provoquera seulement le re-rendu de `<DisplayA>` et le bouton `b++` provoquera seulement le re-rendu de `<DisplayB>`. Le rendu fin est une propriété importante de Qwik. C'est ce qui permet aux applications Qwik de rester légères et de ne pas charger trop de code inutilement.
 
 Les abonnements aux templates sont automatiquement créés et libérés lorsque le composant est supprimé. Il n'est pas nécessaire d'en assurer le suivi ou de les libérer manuellement.
 
-Qwik est un système réactif. Tous les systèmes réactifs nécessitent une seule exécution complète de l'application pour créer des abonnements. Les applications Qwik nécessitent aussi une exécution complète pour mettre en place tous les abonnements. Cependant, les applications Qwik effectuent l'exécution complète sur le serveur et transfèrent les informations d'abonnement au client. De cette façon, le client sait quel composant a besoin d'être rendu à quel moment sans être forcé de faire un rendu complet de l'application entière. Faire cela obligerait tous les composants à être par avance téléchargés, et Qwik veut éviter cela.
+Qwik est un système réactif. Tous les systèmes réactifs nécessitent une seule exécution complète de l'application pour créer des abonnements. Les applications Qwik nécessitent aussi une exécution complète pour mettre en place tous les abonnements. Cependant, les applications Qwik effectuent l'exécution complète sur le serveur et transfèrent les informations d'abonnement au client. De cette façon, le client sait quel composant a besoin d'être rendu à quel moment sans être forcé de faire un rendu complet de l'application entière. Faire cela obligerait tous les composants à être par avance chargés, et Qwik veut éviter cela.
