--- a/src/routes/docs/advanced/containers/index.mdx
+++ b/src/routes/docs/advanced/containers/index.mdx
@@ -11,7 +11,7 @@ contributors:
 Les conteneurs sont un moyen de décomposer une application en parties plus petites. Nous appelons ces parties des conteneurs. Les conteneurs présentent plusieurs avantages. Chaque conteneur sur la page peut être indépendamment :
 
 - **résumé** : Chaque conteneur peut être résumé indépendamment de tous les autres composants de la page. La possibilité de résumabilité indépendante réduit encore la quantité d'état qui se désérialise lors de la reprise.
-- **mis à jour** : Chaque conteneur peut être mis à jour/remplacé à tout moment en utilisant `innerHTML`. Cela permet de mettre à jour une partie de la page sans forcer la récupération d'un document HTML complet, sans télécharger ou exécuter le JavaScript.
+- **mis à jour** : Chaque conteneur peut être mis à jour/remplacé à tout moment en utilisant `innerHTML`. Cela permet de mettre à jour une partie de la page sans forcer la récupération d'un document HTML complet, sans charger ou exécuter le JavaScript.
 - **compilé** : Chaque conteneur peut être compilé et déployé séparément des autres conteneurs. La compilation séparée est particulièrement utile pour les applications à grande échelle et les équipes nombreuses travaillant sur ces applications.
 - **versionné** : Chaque conteneur peut exécuter une version différente du framework Qwik. Permettant la composabilité du site web à partir de nombreux petits conteneurs.
 
@@ -47,8 +47,8 @@ Un site typique est composé de deux parties logiques :
 Nous pouvons modéliser les deux parties comme deux conteneurs, l'un pour la navigation et l'autre pour « _l'outlet_ ». Lorsque l'utilisateur navigue pour la première fois vers une route, le serveur répond avec du HTML, qui contient des conteneurs pour la navigation et « _l'outlet_ ». Lorsque l'utilisateur navigue vers la deuxième route, il y a trois façons de résoudre la navigation :
 
 1. L'approche simpliste consiste à faire un aller-retour complet et charger une page entièrement nouvelle. Le principal inconvénient est que l'application perd tous ses états sur le client.
-2. L'approche classique consiste à traiter toute navigation future en JavaScript. Nous remplaçons le composant de « _l'outlet_ » actuel par le nouveau composant de « _l'outlet_ » et laissons le nouveau composant effectuer le rendu. L'inconvénient est que nous devons télécharger et exécuter le JavaScript.
-3. L'approche de Qwik traite la navigation et « _l'outlet_ » comme deux conteneurs différents. La première navigation télécharge le HTML représentant la page complète (avec les deux conteneurs). La navigation suivante récupère le HTML uniquement pour le conteneur de « _l'outlet_ ». Cette approche offre un double avantage. La navigation est rapide (pas de téléchargement ni d'exécution de JavaScript), et l'application conserve son état dans le conteneur parent.
+2. L'approche classique consiste à traiter toute navigation future en JavaScript. Nous remplaçons le composant de « _l'outlet_ » actuel par le nouveau composant de « _l'outlet_ » et laissons le nouveau composant effectuer le rendu. L'inconvénient est que nous devons charger et exécuter le JavaScript.
+3. L'approche de Qwik traite la navigation et « _l'outlet_ » comme deux conteneurs différents. La première navigation charge le HTML représentant la page complète (avec les deux conteneurs). La navigation suivante récupère le HTML uniquement pour le conteneur de « _l'outlet_ ». Cette approche offre un double avantage. La navigation est rapide (pas de chargement ni d'exécution de JavaScript), et l'application conserve son état dans le conteneur parent.
 
 ### Micro-frontend
 
