--- a/src/routes/docs/advanced/i18n/index.mdx
+++ b/src/routes/docs/advanced/i18n/index.mdx
@@ -24,7 +24,7 @@ Les inconvénients de l'approche à l'exécution sont les suivants :
   1. Une fois comme chaîne originale dans le code.
   2. Une fois en tant que clé dans une map de traduction.
   3. Une fois en tant que valeur traduite dans la map de traduction.
-- Les outils ne savent pas comment découper la map de traduction, pour cette raison, la map de traduction entière doit être chargée par avance au démarrage de l'application. C'est un problème parce que cela annule l'effort que Qwik a mis dans la décomposition et le chargement différé de votre base de code. En outre, parce que les maps de traduction ne sont pas divisées, le navigateur va télécharger des traductions inutiles. Par exemple, les traductions pour les composants statiques qui ne seront jamais rendus sur le client. 
+- Les outils ne savent pas comment découper la map de traduction, pour cette raison, la map de traduction entière doit être chargée par avance au démarrage de l'application. C'est un problème parce que cela annule l'effort que Qwik a mis dans la décomposition et le chargement différé de votre base de code. En outre, parce que les maps de traduction ne sont pas divisées, le navigateur va charger des traductions inutiles. Par exemple, les traductions pour les composants statiques qui ne seront jamais rendus sur le client. 
 - Il y a un coût d'exécution pour les recherches de traduction.
 
 Les avantages de l'approche à la compilation sont :
