--- a/src/routes/docs/advanced/prefetching/index.mdx
+++ b/src/routes/docs/advanced/prefetching/index.mdx
@@ -8,9 +8,9 @@ contributors:
 
 # Prélecture
 
-La prélecture est un moyen pour les applications de commencer à télécharger des modules en tâche de fond, avant que l'utilisateur n'ait réellement besoin de ces modules. La solution idéale est de ne précharger que la plus petite quantité de code qui est hautement susceptible d'être exécutée à partir de l'interaction de l'utilisateur, tout en omettant tout JavaScript qui ne pourrait pas être utilisé.
+La prélecture est un moyen pour les applications de commencer à charger des modules en tâche de fond, avant que l'utilisateur n'ait réellement besoin de ces modules. La solution idéale est de ne précharger que la plus petite quantité de code qui est hautement susceptible d'être exécutée à partir de l'interaction de l'utilisateur, tout en omettant tout JavaScript qui ne pourrait pas être utilisé.
 
-Qwik excelle dans le téléchargement et l'exécution d'une quantité minimale de JavaScript. Et puisque Qwik est capable de comprendre comment les composants individuels sont utilisés (et ce qui n'est pas utilisé), il peut aussi mieux décider quels bundles doivent être préchargés.
+Qwik excelle dans le chargement et l'exécution d'une quantité minimale de JavaScript. Et puisque Qwik est capable de comprendre comment les composants individuels sont utilisés (et ce qui n'est pas utilisé), il peut aussi mieux décider quels bundles doivent être préchargés.
 
 Rappelez-vous, la [différence entre la résumabilité et l'hydratation](/docs/concepts/resumable/), est que la résumabilité permet aux applications Qwik d'éviter d'exécuter du JavaScript juste pour restaurer les écouteurs d'événements, l'arborescence des composants, et l'état de l'application. En séparant fondamentalement les écouteurs d'événements, la fonction de rendu et l'état d'un composant, la quantité de code à précharger est considérablement plus petite qu'une approche traditionnelle.
 
@@ -20,7 +20,7 @@ Lorsque Qwik fait le rendu d'une appli, il est capable de collecter les « symb
 
 Par exemple, une page de produit peut avoir un écouteur de clic sur le bouton « Ajouter au panier », et quand ce bouton est cliqué, l'utilisateur devrait immédiatement avoir un retour pour montrer le produit ajouté au panier. Dans cet exemple, l'optimiseur de Qwik serait capable de comprendre que le seul symbole avec lequel un utilisateur pourrait interagir est l'écouteur d'événement de clic sur le bouton « Ajouter au panier ».
 
-Pour notre exemple « Ajouter au panier », l'Optimiseur ne collectera uniquement que les symboles pour l'écouteur d'événement du clic et le moteur de rendu du widget d'ajout au panier. Il n'aura cependant pas à télécharger, hydrater et re-rendre les autres parties de l'application, puisqu'il n'est même pas possible de re-rendre les autres sections de la page.
+Pour notre exemple « Ajouter au panier », l'Optimiseur ne collectera uniquement que les symboles pour l'écouteur d'événement du clic et le moteur de rendu du widget d'ajout au panier. Il n'aura cependant pas à charger, hydrater et re-rendre les autres parties de l'application, puisqu'il n'est même pas possible de re-rendre les autres sections de la page.
 
 Puisque Qwik comprend ce qui est possible, il est capable de précharger le code seulement pour l'écouteur d'événement plutôt que tout le JavaScript pour l'application ou la route entière. Ceci est en contraste avec l'approche traditionnelle, où la prélecture est utilisée pour charger l'application ou la route entière, et le code du framework, juste pour que l'application ajoute l'écouteur d'événement du clic.
 
@@ -91,23 +91,23 @@ L'inconvénient, c'est que la réponse récupérée est rejetée et que ce n'est
 
 ## Questions fréquemment posées sur la prélecture
 
-**QUESTION** : _Le chargement différé sur les événements utilisateur est lent car l'utilisateur doit attendre le téléchargement du code ?_
+**QUESTION** : _Le chargement différé sur les événements utilisateur est lent car l'utilisateur doit attendre le chargement du code ?_
 
 Oui, cela créerait un retard notable, surtout sur les réseaux 3G lents. C'est pourquoi la prélecture du code est une composante importante des applications Qwik.
 
 La prélecture du code permet de s'assurer que tout le code nécessaire à l'exécution de l'application est récupéré immédiatement lors de la navigation sur la page. De cette manière, lorsque l'utilisateur effectue une action, le code correspondant à cette action provient du cache de prélecture plutôt que du réseau. Le résultat est que l'exécution du code est instantanée.
 
-**QUESTION** : _La prélecture du code n'entraîne-t-elle pas le même comportement que les frameworks existants qui téléchargent et exécutent tout le code par avance ?_
+**QUESTION** : _La prélecture du code n'entraîne-t-elle pas le même comportement que les frameworks existants qui chargent et exécutent tout le code par avance ?_
 
 Non, pour plusieurs raisons :
 
-- Les frameworks existants doivent télécharger et exécuter tout le code ([hydratation](../../../docs/concepts/resumable/index.mdx)) avant que l'application puisse être interactive. Typiquement le téléchargement du code représente un coût en temps plus petit que l'exécution du code.
-- La prélecture de code de Qwik télécharge seulement le code mais ne l'exécute pas. Par conséquent, même si Qwik récupère la même quantité de code que les frameworks existants, le gain de temps est significatif.
-- Qwik pré lit seulement le code qui est nécessaire pour la page actuelle. Qwik évite de télécharger le code associé aux composants qui sont statiques. Dans le pire des cas, Qwik récupère la même quantité de code que les frameworks existants dans le cas le plus favorable. Dans la plupart des cas, Qwik récupère une petite portion de code comparé aux frameworks existants.- Prefetching of code can happen on other threads than the main thread. Many browsers can even pre-parse the AST of the code off the main thread.
+- Les frameworks existants doivent charger et exécuter tout le code ([hydratation](../../../docs/concepts/resumable/index.mdx)) avant que l'application puisse être interactive. Typiquement le chargement du code représente un coût en temps plus petit que l'exécution du code.
+- La prélecture de code de Qwik charge seulement le code mais ne l'exécute pas. Par conséquent, même si Qwik récupère la même quantité de code que les frameworks existants, le gain de temps est significatif.
+- Qwik pré lit seulement le code qui est nécessaire pour la page actuelle. Qwik évite de charger le code associé aux composants qui sont statiques. Dans le pire des cas, Qwik récupère la même quantité de code que les frameworks existants dans le cas le plus favorable. Dans la plupart des cas, Qwik récupère une petite portion de code comparé aux frameworks existants.- Prefetching of code can happen on other threads than the main thread. Many browsers can even pre-parse the AST of the code off the main thread.
 - La prélecture de code peut se faire sur d'autres threads que le thread principal. De nombreux navigateurs peuvent même précharger l'AST du code en dehors du thread principal.
 - Si l'interaction de l'utilisateur se produit avant que la prélecture soit terminée, le navigateur donnera automatiquement la priorité au morceau de l'interaction avant les autres morceaux de prélecture.
-- Qwik peut décomposer l'application en plusieurs petits morceaux, et ces morceaux peuvent être téléchargés selon l'ordre de probabilité que l'utilisateur interagisse avec eux. Les frameworks existants ont des difficultés à décomposer les applications en petits morceaux, et il n'y a pas de moyen facile de hiérarchiser l'ordre de téléchargement des morceaux car l'hydratation nécessite un seul point d'entrée "principal" dans l'application.
+- Qwik peut décomposer l'application en plusieurs petits morceaux, et ces morceaux peuvent être chargés selon l'ordre de probabilité que l'utilisateur interagisse avec eux. Les frameworks existants ont des difficultés à décomposer les applications en petits morceaux, et il n'y a pas de moyen facile de hiérarchiser l'ordre de chargement des morceaux car l'hydratation nécessite un seul point d'entrée "principal" dans l'application.
 
 **QUESTION** : _Qui est responsable de la détermination de la prélecture du code ?_
 
-Qwik peut générer automatiquement les instructions de la prélecture dans le cadre du rendu SSR. En exécutant l'application, Qwik a une connaissance d'exécution des composants visibles, des événements que les utilisateurs peuvent déclencher et du code qui devra être téléchargé. La conséquence est que la prélecture est un ensemble idéal de fichiers pour cette page. Aucune action de la part des développeurs n'est requise autre que de configurer le `renderToStream()` avec la stratégie de la prélecture.
+Qwik peut générer automatiquement les instructions de la prélecture dans le cadre du rendu SSR. En exécutant l'application, Qwik a une connaissance d'exécution des composants visibles, des événements que les utilisateurs peuvent déclencher et du code qui devra être chargé. La conséquence est que la prélecture est un ensemble idéal de fichiers pour cette page. Aucune action de la part des développeurs n'est requise autre que de configurer le `renderToStream()` avec la stratégie de la prélecture.
