--- a/src/routes/docs/overview/index.mdx
+++ b/src/routes/docs/overview/index.mdx
@@ -11,7 +11,7 @@ import { getCommunity } from './community';
 
 # Bienvenue sur Qwik
 
-Qwik est un nouveau type de framework web qui peut fournir des applications web à chargement instantané, quelle que soit leur taille ou leur complexité. Vos sites et applis peuvent démarrer avec environ 1kb de JS (indépendamment de la complexité de l'application), et bénéficier de performances constantes à grande échelle.
+Qwik est un nouveau type de framework web qui peut fournir des applications web avec un chargement instantané, quelles que soient leurs tailles ou leurs complexités. Vos sites et applis démarrent avec environ 1kb de JS (indépendamment de la complexité de l'application), et bénéficient de performances constantes à grande échelle.
 
 [Consultez d'autres présentations, vidéos et podcasts](/media/)
 
@@ -24,11 +24,11 @@ Qwik est un nouveau type de framework web qui peut fournir des applications web 
   </div>
     <div class="card">
     <h3>Instantané</h3>
-    <p>Contrairement aux autres frameworks, Qwik est résumable, ce qui signifie que les applications Qwik ne nécessitent aucune hydratation. Cela permet aux applis Qwik d'avoir une interactivité instantanée, quelle que soit leur taille ou leur complexité.</p>
+    <p>Contrairement aux autres frameworks, Qwik est résumable, ce qui signifie que les applications Qwik ne nécessitent aucune hydratation. Cela permet aux applis Qwik d'avoir une interactivité instantanée, quelles que soient leurs tailles ou leurs complexités.</p>
   </div>
     <div class="card">
     <h3>Optimisé pour la vitesse</h3>
-    <p>Qwik a une performance sans précédent, offrant des chargements de pages complètes en moins d'une seconde même sur les appareils mobiles. Qwik atteint ce résultat en fournissant du HTML pur, et en chargeant JS de façon incrémentale, seulement quand c'est nécessaire.</p>
+    <p>Qwik a une performance sans précédent, offrant des chargements de pages complètes en moins d'une seconde même sur les appareils mobiles. Qwik atteint ce résultat en fournissant du HTML pur, et en chargeant du JS de façon incrémentale, seulement quand c'est nécessaire.</p>
   </div>
 </div>
 
