--- a/src/routes/qwikcity/prefetching/parallelizing-network-requests/index.mdx
+++ b/src/routes/qwikcity/prefetching/parallelizing-network-requests/index.mdx
@@ -17,7 +17,7 @@ Cependant, parce que l'appli a été construite avec Qwik, l'utilisateur final n
 
 Dans cet exemple extrêmement courant dans le monde réel d'un appareil avec une connexion lente, l'appareil commence immédiatement à précharger les interactions possibles qui sont visibles par l'utilisateur final. Toutefois, en raison de la lenteur de la connexion, même si nous avons commencé à effectuer la prélecture dès que possible dans un [thread d'arrière-plan] (../service-worker-prefetching/index.mdx), la requête de prélecture elle-même peut encore être en cours.
 
-À des fins de démonstration, disons que la prélecture pour ce bundle prend deux secondes. Cependant, après une seconde d'affichage de la page, l'utilisateur clique sur le bouton. Dans un framework traditionnel, il y a de fortes chances pour qu'il ne se passe absolument rien ! Si le téléchargement du framework n'est pas terminé, l'appli n'est pas hydratée, l'appli n'a pas été re-rendue et l'écouteur d'événement n'a pas encore été ajouté au bouton. Malheureusement, l'interaction de l'utilisateur serait tout simplement perdue sur un framework utilisant l'hydratation.
+À des fins de démonstration, disons que la prélecture pour ce bundle prend deux secondes. Cependant, après une seconde d'affichage de la page, l'utilisateur clique sur le bouton. Dans un framework traditionnel, il y a de fortes chances pour qu'il ne se passe absolument rien ! Si le chargement du framework n'est pas terminé, l'appli n'est pas hydratée, l'appli n'a pas été re-rendue et l'écouteur d'événement n'a pas encore été ajouté au bouton. Malheureusement, l'interaction de l'utilisateur serait tout simplement perdue sur un framework utilisant l'hydratation.
 
 Cependant, avec la prélecture et la mise en cache de Qwik, si l'utilisateur a cliqué sur le bouton, et que nous avons déjà commencé une requête il y a une seconde, et qu'il reste une seconde avant qu'elle ne soit complètement reçue, alors l'utilisateur final n'a qu'une seconde à attendre. N'oubliez pas qu'il dispose d'une connexion 3G lente pour cette démonstration. Heureusement, l'utilisateur a déjà reçu le rendu complet de la page d'accueil, donc il voit déjà une page complète. Ensuite, il ne précharge que les parties de l'appli avec lesquelles il peut interagir, et sa connexion lente n'est dédiée qu'à ce(s) bundle(s). Cela contraste avec la lenteur de leur connexion qui charge toutes les applications, juste pour exécuter l'écouteur unique.
 
@@ -47,6 +47,6 @@ console.log('Module C');
 <script type="module" src="./a.js"></script>
 ```
 
-Dans cet exemple, lorsque le module A est appelé pour la première fois, le navigateur ne sait pas qu'il doit également demander les modules B et C. Il ne sait même pas qu'il doit commencer à demander le module B avant que le module A ne soit terminé. Il ne sait même pas qu'il doit commencer à demander le module `B`, seulement APRÈS que le module `A` ait fini de se télécharger. Il s'agit d'un problème courant dans la mesure où le navigateur ne sait pas à l'avance ce qu'il doit commencer à demander, jusqu'à ce que le chargement de chaque module soit terminé.
+Dans cet exemple, lorsque le module A est appelé pour la première fois, le navigateur ne sait pas qu'il doit également demander les modules B et C. Il ne sait même pas qu'il doit commencer à demander le module B avant que le module A ne soit terminé. Il ne sait même pas qu'il doit commencer à demander le module `B`, seulement APRÈS que le module `A` ait fini de se charger. Il s'agit d'un problème courant dans la mesure où le navigateur ne sait pas à l'avance ce qu'il doit commencer à demander, jusqu'à ce que le chargement de chaque module soit terminé.
 
 Cependant, comme notre service worker contient un graphe de modules généré à partir du manifeste, nous connaissons tous les modules qui seront demandés ensuite. Ainsi, lors d'une interaction avec l'utilisateur ou d'une recherche préalable d'un bundle, le navigateur lance la demande de tous les bundles qui seront demandés. Cela nous permet de réduire considérablement le temps nécessaire pour demander tous les bundles.
