--- a/src/routes/qwikcity/prefetching/service-worker-prefetching/index.mdx
+++ b/src/routes/qwikcity/prefetching/service-worker-prefetching/index.mdx
@@ -11,7 +11,7 @@ contributors:
 
 Traditionnellement, un worker de service est utilisé pour précharger la plupart, voire la totalité, des bundles qu'une application utilise. Les [Service Workers] (https://developer.mozilla.org/fr/docs/Web/API/Service_Worker_API/Using_Service_Workers) sont généralement vus comme un moyen de faire fonctionner une application hors ligne.
 
-Qwik City, cependant, utilise les service workers très différemment pour fournir une stratégie puissante de préchargement et de mise en cache. Au contraire, le but n'est pas de télécharger l'application entière, mais plutôt d'utiliser le service worker pour précharger dynamiquement ce qui est _possible_ d'exécuter. En _ne préchargeant pas_ toute l'application, cela libère des ressources pour ne demander que les petites parties de l'appli qu'un utilisateur _pourrait_ utiliser en fonction de ce qu'il a sur son écran à ce moment-là.
+Qwik City, cependant, utilise les service workers très différemment pour fournir une stratégie puissante de préchargement et de mise en cache. Au contraire, le but n'est pas de charger l'application entière, mais plutôt d'utiliser le service worker pour précharger dynamiquement ce qui est _possible_ d'exécuter. En _ne préchargeant pas_ toute l'application, cela libère des ressources pour ne demander que les petites parties de l'appli qu'un utilisateur _pourrait_ utiliser en fonction de ce qu'il a sur son écran à ce moment-là.
 
 ## Tâche en arrière-plan
 
